[package]
name = "trace"
version = "0.2.0"
edition = "2021"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tower = ["dep:tower", "tower-layer"]
actix = ["actix-web"]

[dependencies]
http = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-core = "0.1.32"
tracing-opentelemetry = { version = "0.23.0", features = ["tracing-log"] }
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["logs", "metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-jaeger-propagator = "0.1.0"
tower-layer = { version = "0.3.2", optional = true }
tower = { version = "0.4.13", optional = true }
actix-web = { version = "4.5.1", optional = true }

[package.metadata.docs.rs]
all-features = true
